# Clockly

./: LICENSE  README.md  asd.py  compose.yaml
backend/: .env.examlpe  .gitignore  Conteinerfile  Dockerfile  app_types.py  config.py  exceptions_handler.py  logger.py  main.py  pyproject.toml  requirements.txt
backend/DTOs/: __init__.py  auth_dtos.py  calendar_dtos.py  export_dros.py  visualization_dtos.py
backend/auth/: __init__.py  auth_utils.py  jwt_handlers.py  jwt_utils.py  password_handlers.py
backend/postgre/: __init__.py  database.py  models.py  postgre_service.py  requirements.txt
backend/routers/: TODO  __init__.py  auth_router.py  calendar_router.py  chart_router.py  export_router.py  visualization_router.py
backend/services/: __init__.py  service_base.py
backend/services/core_services/: TODO  __init__.py  auth_service.py  calendar_service.py  calendar_service_shared.py  calendar_shared_methods_service_base.py  export_service.py  visualization_service.py
backend/services/postgre_service/: abc_postgre_service.py  postgre_service.py
backend/services/redis_service/: redis_service.py
backend/utils/: __init__.py  dates_utils.py  validation_utils.py
frontend/: .dockerignore  .gitignore  Containerfile  README.md  TODO  app.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: _layout.tsx
frontend/app/(tabs)/: _layout.tsx  account.tsx  calendar.tsx  home.tsx  index.tsx  tasks.tsx
frontend/components/: heat_map.tsx  scroll_day.tsx
frontend/constants/: days.ts  devConst.tsx  mainConst.tsx
(+43 files in other folders)
