[project]
name = "clockly-backend"
version = "0.1"
requires-python = ">= 3.9"
dependencies = [
    "fastapi==0.105.0",
    "uvicorn==0.35.0",
    "asyncpg==0.31.0",
    "sqlalchemy[asyncio]==2.0.46",
    "python-dotenv==1.2.1",
    "bcrypt==4.0.1",
    "pyjwt==2.9.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.14.0"
]


[project.optional-dependencies]
dev = [
    "black"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length=79
target-version = ["py39", "py310", "py311", "py312"]

# https://github.com/pypa/setuptools/issues/3197#issuecomment-1078770109
# Required for disabling packages auto-discovery
[tool.setuptools]
py-modules = []